--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
                   <div class="ms-lg-5 row g-0">
         <!-- Profile card -->
                     <div class="col-12 col-xs-12 col-sm-12 col-md-6 col-lg-5 col-xl-5">
-                        <img src="../Images/Portfolio test image.jpg" alt="Profile Picture" class="card-img-top" style="border-radius: 1000px">
+                        <img src="./Images/IMG_1405 resized.jpg" alt="Profile Picture" class="card-img-top" style="border-radius: 1000px">
                     </div>
                 <div class="pt-xxl-5 col-12 col-xs-12 col-sm-12 col-md-6 col-lg-7 col-xl-7 text-center">
                   <div class="card-body pt-4 mt-5">
                     <h2 class="card-title mb-3" style="color: white">Sione Yerkovich</h2>
-                    <h5 class="card-title mb-5 text-primary">Student Developer</h5>
+                    <h5 class="card-title mb-5 text-primary">Emerging Software Developer</h5>
                     <a href="./Sione Yerkovich CV - 2024.pdf" download="Sione Yerkovich CV"><button type="button" class="btn btn-info btn-lg me-3">Download CV</button></a>
                     <button type="button" class="btn btn-outline-info btn-lg text-white" onclick="location.href='./#contact'">Contact Me</button>
         <!-- ATTENTION. MUST ADD HREF TO LINKS BELOW -->
@@ -103,6 +103,7 @@
 
             <div class="container">
             <div class="row gy-5">
+
         <!-- Experience Card -->
                 <div class="col-md-6 col-sm-12 text-center">
                     <div class="card border-info" style="border-radius: 15px">
@@ -110,16 +111,17 @@
                         <h5 class="mb-4">Experience</h5>
                         <p class="mb-3" style="color: white">Frontend & Backend Development</p>
                         <p class="mb-3" style="color: white">Project Management & SDLC</p>
-                        <p style="color: white">Data Modelling and Normalization</p>
+                        <p class="mb-4 pb-2" style="color: white">Data Modelling and Normalization</p>
                     </div>
                 </div>
         <!-- Education Card -->
                 <div class="col-md-6 col-sm-12 text-center">
-                    <div class="card border-info" style="border-radius: 15px">
+                    <div class="card border-info pb-3" style="border-radius: 15px">
                         <h3 class="mt-4 text-info"><i class="bi bi-book"></i></h3>
                         <h5 class="mb-4">Education</h5>
                         <p class="mb-3" style="color: white">Diploma of Information Systems</p>
-                        <p style="color: white; height: 62px">Diploma of Software Development (current)</p>
+                        <p style="color: white;">Diploma of Software Development (current)</p>
+                        <a href="./Level 5 IS Transcript - Sione Yerkovich.pdf" download="Sione Yerkovich Academic transcript"><i class="bi bi-download fs-5"></i><button type="button" class="btn btn-info btn-sm mb-2 ms-3">Academic Transcript</button></a>
                     </div>
                 </div>
         <!-- Skills Card -->
@@ -129,8 +131,7 @@
                 <h5 class="mb-4">Additional Skills</h5>
                 <p class="mb-3" style="color: white">Design Principles</p>
                 <p class="mb-3" style="color: white">Source/Version Control</p>
-                <p style="color: white; height: 62px">Development Testing</p>
-                
+                <p class="mb-4 pb-2" style="color: white;">Development Testing</p>
             </div>
         </div>
         <!-- Descriptive text -->
