--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <a href="https://github.com/YerkoBizerkohttps://www.linkedin.com/in/sione-yerkovich-38239b191/?originalSubdomain=nz" target="_blank"><btn type="button" class="text-white mt-3 ms-4 me-4" style="font-size: 2rem" alt="LinkedIn link icon">
                           <i class="bi bi-linkedin"><span class="visually-hidden">LinkedIn Icon</span></i>
                         </a></btn>
-                        <a href="https://github.com/YerkoBizerko" target="_blank"><btn type="button" class="text-white" style="font-size: 2rem" alt="Github link icon">
+                        <a href="https://github.com/SioneYerkovich" target="_blank"><btn type="button" class="text-white" style="font-size: 2rem" alt="Github link icon">
                           <i class="bi bi-github"><span class="visually-hidden">Github Icon</span></i>
                         </a></btn>
                       </div>
@@ -202,8 +202,8 @@
                             <h4 class="ms-5 fst-italic fw-bold">Pet Paradise Webstore</h5>
                             <p class="ms-5 mb-0 text-primary fw-bold">HTML5 | CSS | Javascript | Bootstrap</p>
                             <p class="ms-5 mb-0 mt-1 fst-italic lead" style="color: white;">Frontend project</p>
-                                    <a href="https://github.com/YerkoBizerko/Pet_Paradise" target="new"><button type="button" class="btn btn-info ms-5 mb-4 mt-3">Github</button></a>
-                                    <a href="https://yerkobizerko.github.io/Pet_Paradise/" target="new"><button type="button" class="btn btn-info ms-1 mb-4 mt-3 text-white text-nowrap">Try it</button></a>
+                                    <a href="https://github.com/SioneYerkovich/Pet_Paradise" target="new"><button type="button" class="btn btn-info ms-5 mb-4 mt-3">Github</button></a>
+                                    <a href="https://sioneyerkovich.github.io/Pet_Paradise/" target="new"><button type="button" class="btn btn-info ms-1 mb-4 mt-3 text-white text-nowrap">Try it</button></a>
                         </div>
                     </div>
                     <div class="container">
@@ -240,7 +240,7 @@
                     <h4 class="ms-5 fst-italic fw-bold">Sanctuary of Sound</h5>
                     <p class="ms-5 mb-0 text-primary fw-bold">.NET | C# | SQL</p>
                     <p class="ms-5 mb-0 mt-1 fst-italic lead" style="color: white;">Frontend / Backend</p>
-                            <a href="https://github.com/YerkoBizerko/Music-application" target="new"><button type="button" class="btn btn-info ms-5 mb-4 mt-3">Github</button></a>
+                            <a href="https://github.com/SioneYerkovich/Music-application" target="new"><button type="button" class="btn btn-info ms-5 mb-4 mt-3">Github</button></a>
                             <a href="Sanctuary of sound.html" target="new"><button type="button" class="btn btn-info ms-1 mb-4 mt-3 text-white text-nowrap">Try it</button></a>
                 </div>
             </div>
@@ -311,7 +311,7 @@
                 <i class="bi bi-linkedin text-white"><span class="visually-hidden">LinkedIn Icon</span></i>
               </a>
               </btn>
-              <a href="https://github.com/YerkoBizerko" target="_blank"><btn type="button" class="text-black" style="font-size: 2rem" alt="Github link icon">
+              <a href="https://github.com/SioneYerkovich" target="_blank"><btn type="button" class="text-black" style="font-size: 2rem" alt="Github link icon">
                 <i class="bi bi-github text-white"><span class="visually-hidden">Github Icon</span></i>
               </a>
               </btn>
