--- a/Sanctuary of sound.html
+++ b/Sanctuary of sound.html
@@ -67,7 +67,7 @@
                 <h5 class="text-primary">User demonstration</h5>
             </div>
             <div class="d-flex justify-content-center">
-                <a href="https://github.com/YerkoBizerko/Music-application" target="_blank"><btn type="button" class="text-white" style="font-size: 2rem" alt="Github link icon">
+                <a href="https://github.com/SioneYerkovich/Music-application" target="_blank"><btn type="button" class="text-white" style="font-size: 2rem" alt="Github link icon">
                     <i class="bi bi-github"><span class="visually-hidden">Github Icon</span></i>
                   </a></btn>
             </div>
@@ -106,7 +106,7 @@
                <i class="bi bi-linkedin text-white"><span class="visually-hidden">LinkedIn Icon</span></i>
              </a>
              </btn>
-             <a href="https://github.com/YerkoBizerko" target="_blank"><btn type="button" class="text-black" style="font-size: 2rem" alt="Github link icon">
+             <a href="https://github.com/SioneYerkovich" target="_blank"><btn type="button" class="text-black" style="font-size: 2rem" alt="Github link icon">
                <i class="bi bi-github text-white"><span class="visually-hidden">Github Icon</span></i>
              </a>
              </btn>
