--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
         <!-- Experience section (COMPLETED) -->
         <section id="experience">
             <div class="container text-center mb-5 pb-5">
-                <p class="mb-1 lead">Tūmahi wheako</p>
-                <h2 id="scrollspyHeading2">Experience</h2>
+                <p class="mb-1 lead">Matatau</p>
+                <h2 id="scrollspyHeading2">Proficiencies</h2>
             </div>
         <!-- Frontend experience card -->
         <div class="container">
