--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <button type="button" class="btn btn-outline-info btn-lg text-white" onclick="location.href='./#contact'">Contact Me</button>
         <!-- ATTENTION. MUST ADD HREF TO LINKS BELOW -->
                       <div>
-                        <a href="https://github.com/YerkoBizerkohttps://www.linkedin.com/in/sione-yerkovich-38239b191/?originalSubdomain=nz" target="_blank"><btn type="button" class="text-white mt-3 ms-4 me-4" style="font-size: 2rem" alt="LinkedIn link icon">
+                        <a href="https://www.linkedin.com/in/sione-yerkovich-38ba67341/" target="_blank"><btn type="button" class="text-white mt-3 ms-4 me-4" style="font-size: 2rem" alt="LinkedIn link icon">
                           <i class="bi bi-linkedin"><span class="visually-hidden">LinkedIn Icon</span></i>
                         </a></btn>
                         <a href="https://github.com/SioneYerkovich" target="_blank"><btn type="button" class="text-white" style="font-size: 2rem" alt="Github link icon">
@@ -207,7 +207,7 @@
                         </div>
                     </div>
                     <div class="container">
-                        <p class="mx-4 mt-3 text-white text-center">A static e-commerce website. Developed using many of the latest HTML5 and Bootstrap 5 features such as cards, carousel & new utilities. Designed with CSS styling properties and Javascript for functionality.</p>
+                        <p class="mx-4 mt-3 text-white text-center">A dynamic e-commerce web application. Developed using many of the latest HTML5 and Bootstrap 5 features such as cards, carousel & new utilities. Designed with CSS styling properties and Javascript for functionality.</p>
                     </div>
                 </div>
         <!-- Quicksilver -->
@@ -307,7 +307,7 @@
           <div class="text-center mt-5">
             <btn type="button" onclick="location.href='./#profile'"><img src="./Images/yerkovich logo.PNG" class="img-fluid" width="170" alt="Yerkovich Logo"></btn>
             <div class="text-center mb-3 mt-3">
-              <a href="https://www.linkedin.com/in/sione-yerkovich-38239b191/?originalSubdomain=nz" target="_blank"><btn type="button" class="text-black me-4" style="font-size: 2rem" alt="LinkedIn link icon">
+              <a href="https://www.linkedin.com/in/sione-yerkovich-38ba67341/" target="_blank"><btn type="button" class="text-black me-4" style="font-size: 2rem" alt="LinkedIn link icon">
                 <i class="bi bi-linkedin text-white"><span class="visually-hidden">LinkedIn Icon</span></i>
               </a>
               </btn>
