--- a/Sanctuary of sound.html
+++ b/Sanctuary of sound.html
@@ -102,7 +102,7 @@
          <div class="text-center mt-5">
            <btn type="button" onclick="location.href='./#profile'"><img src="./Images/yerkovich logo.PNG" class="img-fluid" width="170" alt="Yerkovich Logo"></btn>
            <div class="text-center mb-3 mt-3">
-             <a href="https://www.linkedin.com/in/sione-yerkovich-38239b191/?originalSubdomain=nz" target="_blank"><btn type="button" class="text-black me-4" style="font-size: 2rem" alt="LinkedIn link icon">
+             <a href="https://www.linkedin.com/in/sione-yerkovich-38ba67341/" target="_blank"><btn type="button" class="text-black me-4" style="font-size: 2rem" alt="LinkedIn link icon">
                <i class="bi bi-linkedin text-white"><span class="visually-hidden">LinkedIn Icon</span></i>
              </a>
              </btn>
