--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                   <div class="card-body pt-4 mt-5">
                     <h2 class="card-title mb-3" style="color: white">Sione Yerkovich</h2>
                     <h5 class="card-title mb-5 text-primary">Emerging Software Developer</h5>
-                    <a href="./CV - 2024 (CURRENT).pdf" download="Sione Yerkovich CV"><button type="button" class="btn btn-info btn-lg me-3">Download CV</button></a>
+                    <a href="./CV - 2024 (UTD).pdf.pdf" download="Sione Yerkovich CV"><button type="button" class="btn btn-info btn-lg me-3">Download CV</button></a>
                     <button type="button" class="btn btn-outline-info btn-lg text-white" onclick="location.href='./#contact'">Contact Me</button>
         <!-- ATTENTION. MUST ADD HREF TO LINKS BELOW -->
                       <div>
