--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                                 </a>
                             </li>
                             <li class="nav-item me-3 mb-1">
-                                <a class="nav-link bold-text" href="#scrollspyHeading2" onclick="location.href='./#experience'">Experience</a>
+                                <a class="nav-link bold-text" href="#scrollspyHeading2" onclick="location.href='./#experience'">Proficiencies</a>
                             </li>
                             <li class="nav-item me-3 mb-1">
                                 <a class="nav-link bold-text" href="#scrollspyHeading3" onclick="location.href='./#projects'">Projects</a>
@@ -108,7 +108,7 @@
                 <div class="col-md-6 col-sm-12 text-center">
                     <div class="card border-info" style="border-radius: 15px">
                         <h3 class="mt-4 text-info"><i class="bi bi-award"></i></h3>
-                        <h5 class="mb-4">Experience</h5>
+                        <h5 class="mb-4">Skills</h5>
                         <p class="mb-3" style="color: white">Frontend & Backend Development</p>
                         <p class="mb-3" style="color: white">Project Management & SDLC</p>
                         <p class="mb-4 pb-2" style="color: white">Data Modelling and Normalization</p>
@@ -173,7 +173,9 @@
                         <div class="row mb-5 gy-5">
                             <h5 class="mb-1 col-sm-12 col-md-4" style="color: white"><i class="bi bi-check2-circle text-primary me-2"></i>C#</h5>
                             <h5 class="mb-1 col-sm-12 col-md-4" style="color: white"><i class="bi bi-check2-circle text-primary me-2"></i>SQL</h5>
-                            <h5 class="mb-1 col-sm-12 col-md-4" style="color: white"><i class="bi bi-check2-circle text-primary me-2"></i>.NET</h5>
+                            <h5 class="mb-1 mb-md-3 col-sm-12 col-md-4" style="color: white"><i class="bi bi-check2-circle text-primary me-2"></i>.NET</h5>
+                            <h5 class="mb-1 col-sm-12 col-md-4 offset-md-2" style="color: white"><i class="bi bi-check2-circle text-primary me-2"></i>Python</h5>
+                            <h5 class="mb-1 col-sm-12 col-md-4" style="color: white"><i class="bi bi-check2-circle text-primary me-2"></i>Django</h5>
                         </div>
                 </div>
             </div>
@@ -191,8 +193,28 @@
 
             <div class="container">
             <div class="row gy-5">
+        <!-- The Cullinary Collective -->
+        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12" style="border-radius: 15px">
+            <div class="card d-flex justify-content-end border-light border-end-0 border-top-0 border-bottom-0" style="
+            background-image: url('./Images/Untitled\ design\ \(12\).png');
+            background-size: cover;
+            background-position: center;
+            height: 350px;
+            border-radius: 15px;">
+                <div>
+                    <h4 class="ms-5 fst-italic fw-bold">The Cullinary Collective</h5>
+                    <p class="ms-5 mb-0 text-primary fw-bold">Python | HTML | CSS | Bootstrap | Django</p>
+                    <p class="ms-5 mb-0 mt-1 fst-italic lead" style="color: white;">Frontend / Backend</p>
+                            <a href="https://github.com/SioneYerkovich/TheCullinaryCollective" target="new"><button type="button" class="btn btn-info ms-5 mb-4 mt-3">Github</button></a>
+                            <a href="#" target="new"><button type="button" class="btn btn-info ms-1 mb-4 mt-3 text-white text-nowrap">Try it (coming soon)</button></a>
+                </div>
+            </div>
+            <div class="container">
+                <p class="mx-4 mt-3 text-white text-center">This web application is the culmination of lessons learned from past projects, taking the best and growing from the setbacks. It’s a vibrant, community-driven recipe-sharing platform where users can actively contribute to a growing collection of recipes. <br><br>Sign up to save your favorite recipes or unleash your creativity by adding your own through the 'Recipe Book' feature. Engage with fellow food lovers by leaving reviews, liking dishes, or easily saving your favorite recipes. Need something specific? The powerful search bar lets you quickly find what you're craving.</p>
+            </div>
+        </div>
         <!-- Pet Paradise -->
-                <div class="col-xl-8 col-lg-8 col-md-12 col-sm-12" style="border-radius: 15px">
+                <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12" style="border-radius: 15px">
                     <div class="card d-flex justify-content-end border-light border-end-0 border-top-0 border-start-0" style="
                     background-image: url('./Images/pet\ paradise\ snip\ opaque\ darkest.PNG');
                     background-size: cover;
@@ -207,34 +229,15 @@
                         </div>
                     </div>
                     <div class="container">
-                        <p class="mx-4 mt-3 text-white text-center">A dynamic e-commerce web application. Developed using many of the latest HTML5 and Bootstrap 5 features such as cards, carousel & new utilities. Designed with CSS styling properties and Javascript for functionality.</p>
-                    </div>
-                </div>
-        <!-- Quicksilver -->
-                <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
-                    <div class="card d-flex justify-content-end" style="
-                    background-image: url('./Images/Quiksilver\ opaque.png');
-                    background-size: cover;
-                    height: 350px;
-                    border-radius: 15px;">
-                        <div>
-                            <h4 class="ms-5 fst-italic fw-bold">Quiksilver</h5>
-                            <p class="ms-5 mb-0 text-primary fw-bold">.NET | C#</p>
-                            <p class="ms-5 mb-0 mt-1 fst-italic lead" style="color: white;">Work in progress</p>
-                                    <button type="button" class="btn btn-info ms-5 mb-4 mt-3">Coming soon</button>
-                                    <!--<button type="button" class="btn btn-info ms-1 mb-4 mt-3 text-white text-nowrap">Coming soon</button>-->
-                        </div>
-                    </div>
-                    <div class="container">
-                        <p class="mt-3 text-white text-center">A Windows Form App I developed as a quick and reliable visitor registration system. Built utilizing .NET built-in styling and C# logic.</p>
+                        <p class="mx-4 mt-3 text-white text-center">A dynamic e-commerce web application built using modern HTML5 and Bootstrap 5 features, including cards, carousels, and advanced utilities. Designed with custom CSS for styling and enhanced with JavaScript to deliver smooth functionality.</p>
                     </div>
                 </div>
         <!-- Sanctuary of Sound -->
-        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12" style="border-radius: 15px">
+        <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12" style="border-radius: 15px">
             <div class="card d-flex justify-content-end border-light border-end-0 border-top-0 border-bottom-0" style="
             background-image: url('./Images/Untitled\ design\ \(3).png');
             background-size: cover;
-            height: 300px;
+            height: 350px;
             border-radius: 15px;">
                 <div>
                     <h4 class="ms-5 fst-italic fw-bold">Sanctuary of Sound</h5>
@@ -245,7 +248,7 @@
                 </div>
             </div>
             <div class="container">
-                <p class="mx-4 mt-3 text-white text-center">This is a CRUD application developed using the .NET application builder, C# logic, SQL databases and EFCore to manipulate data. Once the user has registered an account, It functions as a media player.</p>
+                <p class="mx-4 mt-3 text-white text-center">A CRUD application built with the .NET framework, C# for business logic, SQL databases, and EFCore for data manipulation. After registration, users can enjoy media player functionality, allowing seamless media playback.</p>
             </div>
         </div>
         </section>
