--- a/Sanctuary of sound.html
+++ b/Sanctuary of sound.html
@@ -27,7 +27,7 @@
             <!-- navbar here (COMPLETED) -->
                 <nav id="NavbarScroll" class="navbar bg-body-light navbar-expand-md border-bottom border-secondary my-2" data-bs-theme="dark" aria-label="navigation bar">
                     <div class="container-fluid mb-3">
-                        <a class="navbar-brand ms-5" onclick="location.href='./#profile'"><img src="../Images/yerkovich logo.PNG" class="img-fluid" width="170" alt="Yerkovich Logo"></a>
+                        <a class="navbar-brand ms-5" href="#" onclick="location.href='./#profile'"><img src="../Images/yerkovich logo.PNG" class="img-fluid" width="170" alt="Yerkovich Logo"></a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
