--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <!-- navbar here (COMPLETED) -->
             <nav id="NavbarScroll" class="navbar bg-body-light navbar-expand-md border-bottom border-secondary my-2" data-bs-theme="dark" aria-label="navigation bar">
                 <div class="container-fluid mb-3">
-                    <a class="navbar-brand ms-5" onclick="location.href='./#profile'"><img src="./Images/yerkovich logo.PNG" class="img-fluid" width="170" alt="Yerkovich Logo"></a>
+                    <a class="navbar-brand ms-5" href="#" onclick="location.href='./#profile'"><img src="./Images/yerkovich logo.PNG" class="img-fluid" width="170" alt="Yerkovich Logo"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -210,7 +210,7 @@
                 </div>
             </div>
             <div class="container">
-                <p class="mx-4 mt-3 text-white text-center">This web application is the culmination of lessons learned from past projects, taking the best and growing from the setbacks. It’s a vibrant, community-driven recipe-sharing platform where users can actively contribute to a growing collection of recipes. <br><br>Sign up to save your favorite recipes or unleash your creativity by adding your own through the 'Recipe Book' feature. Engage with fellow food lovers by leaving reviews, liking dishes, or easily saving your favorite recipes. Need something specific? The powerful search bar lets you quickly find what you're craving.</p>
+                <p class="mx-4 mt-3 text-white text-center">This web application is the culmination of lessons learned from past projects, taking the best and growing from the setbacks. It’s a vibrant, community-driven recipe-sharing platform where users can actively contribute to a growing collection of recipes. <br><br>Sign up to save your favourite recipes or unleash your creativity by adding your own through the 'Recipe Book' feature. Engage with fellow food lovers by leaving reviews, liking dishes, or easily saving your favourite recipes. Need something specific? The powerful search bar lets you quickly find what you're craving.</p>
             </div>
         </div>
         <!-- Pet Paradise -->
