--- a/index.html
+++ b/index.html
@@ -206,11 +206,11 @@
                     <p class="ms-5 mb-0 text-primary fw-bold">Python | HTML | CSS | Bootstrap | Django</p>
                     <p class="ms-5 mb-0 mt-1 fst-italic lead" style="color: white;">Frontend / Backend</p>
                             <a href="https://github.com/SioneYerkovich/TheCullinaryCollective" target="new"><button type="button" class="btn btn-info ms-5 mb-4 mt-3">Github</button></a>
-                            <a href="#" target="new"><button type="button" class="btn btn-info ms-1 mb-4 mt-3 text-white text-nowrap">Try it (coming soon)</button></a>
+                            <a href="https://thecullinarycollective-c1ccb4b2c992.herokuapp.com/" target="new"><button type="button" class="btn btn-info ms-1 mb-4 mt-3 text-white text-nowrap">Try it</button></a>
                 </div>
             </div>
             <div class="container">
-                <p class="mx-4 mt-3 text-white text-center">This web application is the culmination of lessons learned from past projects, taking the best and growing from the setbacks. It’s a vibrant, community-driven recipe-sharing platform where users can actively contribute to a growing collection of recipes. <br><br>Sign up to save your favourite recipes or unleash your creativity by adding your own through the 'Recipe Book' feature. Engage with fellow food lovers by leaving reviews, liking dishes, or easily saving your favourite recipes. Need something specific? The powerful search bar lets you quickly find what you're craving.</p>
+                <p class="mx-4 mt-3 text-white text-center">This web application is the culmination of lessons learned from past projects, taking the best and growing from the setbacks. The main goal was to produce a fully deployed & secure web application with database integration. It’s a vibrant, community-driven recipe-sharing platform where users can actively contribute to a growing collection of recipes. <br><br>Sign up to save your favourite recipes or unleash your creativity by adding your own through the 'Recipe Book' feature. Engage with fellow food lovers by leaving reviews, liking dishes, or easily saving your favourite recipes. Need something specific? The powerful search bar lets you quickly find what you're craving.</p>
             </div>
         </div>
         <!-- Pet Paradise -->
