--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@
                   <div class="card-body pt-4 mt-5">
                     <h2 class="card-title mb-3" style="color: white">Sione Yerkovich</h2>
                     <h5 class="card-title mb-5 text-primary">Emerging Software Developer</h5>
-                    <a href="./CV - 2024 (UTD).pdf.pdf" download="Sione Yerkovich - Emerging Software Developer"><button type="button" class="btn btn-info btn-lg me-3">Download CV</button></a>
+                    <a href="./Sione Yerkovich - Emerging Software Developer - CV.pdf" download="Sione Yerkovich - Emerging Software Developer"><button type="button" class="btn btn-info btn-lg me-3">Download CV</button></a>
                     <button type="button" class="btn btn-outline-info btn-lg text-white" onclick="location.href='./#contact'">Contact Me</button>
         <!-- ATTENTION. MUST ADD HREF TO LINKS BELOW -->
                       <div>
-                        <a href="https://www.linkedin.com/in/sione-yerkovich-38ba67341/" target="_blank"><btn type="button" class="text-white mt-3 ms-4 me-4" style="font-size: 2rem" alt="LinkedIn link icon">
+                        <a href="https://www.linkedin.com/in/sione-yerkovich-38ba67341/" class="text-decoration-none" target="_blank"><btn type="button" class="text-white mt-3 ms-4 me-4" style="font-size: 2rem" alt="LinkedIn link icon">
                           <i class="bi bi-linkedin"><span class="visually-hidden">LinkedIn Icon</span></i>
                         </a></btn>
-                        <a href="https://github.com/SioneYerkovich" target="_blank"><btn type="button" class="text-white" style="font-size: 2rem" alt="Github link icon">
+                        <a href="https://github.com/SioneYerkovich" class="text-decoration-none" target="_blank"><btn type="button" class="text-white" style="font-size: 2rem" alt="Github link icon">
                           <i class="bi bi-github"><span class="visually-hidden">Github Icon</span></i>
                         </a></btn>
                       </div>
@@ -110,17 +110,18 @@
                         <h3 class="mt-4 text-info"><i class="bi bi-award"></i></h3>
                         <h5 class="mb-4">Skills</h5>
                         <p class="mb-3" style="color: white">Frontend & Backend Development</p>
-                        <p class="mb-3" style="color: white">Project Management & SDLC</p>
+                        <p class="mb-3" style="color: white">Project Management</p>
+                        <p class="mb-3" style="color: white">SDLC Knowledge</p>
                         <p class="mb-4 pb-2" style="color: white">Data Modelling and Normalization</p>
                     </div>
                 </div>
         <!-- Education Card -->
                 <div class="col-md-6 col-sm-12 text-center">
-                    <div class="card border-info pb-3" style="border-radius: 15px">
+                    <div class="card border-info pb-4" style="border-radius: 15px">
                         <h3 class="mt-4 text-info"><i class="bi bi-book"></i></h3>
                         <h5 class="mb-4">Education</h5>
                         <p class="mb-3" style="color: white">Diploma of Information Systems</p>
-                        <p style="color: white;">Diploma of Software Development (current)</p>
+                        <p class="mb-5" style="color: white;">Diploma of Software Development (current)</p>
                         <a href="./Level 5 IS Transcript - Sione Yerkovich.pdf" download="Sione Yerkovich Academic transcript"><i class="bi bi-download fs-5"></i><button type="button" class="btn btn-info btn-sm mb-2 ms-3">Academic Transcript</button></a>
                     </div>
                 </div>
@@ -129,8 +130,9 @@
             <div class="card border-info" style="border-radius: 15px">
                 <h3 class="mt-4 text-info"><i class="bi bi-wrench"></i></h3>
                 <h5 class="mb-4">Additional Skills</h5>
-                <p class="mb-3" style="color: white">Design Principles</p>
+                <p class="mb-3" style="color: white">UI/UX Design</p>
                 <p class="mb-3" style="color: white">Source/Version Control</p>
+                <p class="mb-3" style="color: white;">Software Deployment</p>
                 <p class="mb-4 pb-2" style="color: white;">Development Testing</p>
             </div>
         </div>
@@ -310,7 +312,8 @@
           <div class="text-center mt-5">
             <btn type="button" onclick="location.href='./#profile'"><img src="./Images/yerkovich logo.PNG" class="img-fluid" width="170" alt="Yerkovich Logo"></btn>
             <div class="text-center mb-3 mt-3">
-              <a href="https://www.linkedin.com/in/sione-yerkovich-38ba67341/" target="_blank"><btn type="button" class="text-black me-4" style="font-size: 2rem" alt="LinkedIn link icon">
+              <a href="https://www.linkedin.com/in/sione-yerkovich-38ba67341/" class="text-decoration-none
+              " target="_blank"><btn type="button" class="text-black me-4" style="font-size: 2rem" alt="LinkedIn link icon">
                 <i class="bi bi-linkedin text-white"><span class="visually-hidden">LinkedIn Icon</span></i>
               </a>
               </btn>
