--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <h3 class="mt-4 text-info"><i class="bi bi-wrench"></i></h3>
                 <h5 class="mb-4">Additional Skills</h5>
                 <p class="mb-3" style="color: white">UI/UX Design</p>
-                <p class="mb-3" style="color: white">Source/Version Control</p>
+                <p class="mb-3" style="color: white">Version Control</p>
                 <p class="mb-3" style="color: white;">Software Deployment</p>
                 <p class="mb-4 pb-2" style="color: white;">Development Testing</p>
             </div>
@@ -163,6 +163,8 @@
                             <h5 class="mb-1 col-sm-12 col-md-4" style="color: white"><i class="bi bi-check2-circle text-primary me-2"></i>Bootstrap</h5>
                             <h5 class="mb-1 col-sm-12 col-md-4" style="color: white"><i class="bi bi-check2-circle text-primary me-2"></i>HTML</h5>
                             <h5 class="mb-1 col-sm-12 col-md-4" style="color: white"><i class="bi bi-check2-circle text-primary me-2"></i>CSS</h5>
+                            <h5 class="mb-1 col-sm-12 col-md-4 offset-md-2" style="color: white"><i class="bi bi-check2-circle text-primary me-2"></i>XAML</h5>
+                            <h5 class="mb-1 col-sm-12 col-md-4" style="color: white"><i class="bi bi-check2-circle text-primary me-2"></i>.NET Maui</h5>
                         </div>
                 </div>
             </div>
@@ -173,11 +175,10 @@
                 <div class="card border-info" style="border-radius: 15px">
                     <h5 class="mb-4 mt-4 pb-sm-4">Backend Development</h5>
                         <div class="row mb-5 gy-5">
-                            <h5 class="mb-1 col-sm-12 col-md-4" style="color: white"><i class="bi bi-check2-circle text-primary me-2"></i>C#</h5>
-                            <h5 class="mb-1 col-sm-12 col-md-4" style="color: white"><i class="bi bi-check2-circle text-primary me-2"></i>SQL</h5>
-                            <h5 class="mb-1 mb-md-3 col-sm-12 col-md-4" style="color: white"><i class="bi bi-check2-circle text-primary me-2"></i>.NET</h5>
-                            <h5 class="mb-1 col-sm-12 col-md-4 offset-md-2" style="color: white"><i class="bi bi-check2-circle text-primary me-2"></i>Python</h5>
-                            <h5 class="mb-1 col-sm-12 col-md-4" style="color: white"><i class="bi bi-check2-circle text-primary me-2"></i>Django</h5>
+                            <h5 class="mb-1 col-sm-12 col-md-3" style="color: white"><i class="bi bi-check2-circle text-primary me-2"></i>C#</h5>
+                            <h5 class="mb-1 col-sm-12 col-md-3" style="color: white"><i class="bi bi-check2-circle text-primary me-2"></i>SQL</h5>
+                            <h5 class="mb-1 col-sm-12 col-md-3" style="color: white"><i class="bi bi-check2-circle text-primary me-2"></i>Python</h5>
+                            <h5 class="mb-1 col-sm-12 col-md-3" style="color: white"><i class="bi bi-check2-circle text-primary me-2"></i>Django</h5>
                         </div>
                 </div>
             </div>
@@ -251,6 +252,27 @@
             </div>
             <div class="container">
                 <p class="mx-4 mt-3 text-white text-center">A CRUD application built with the .NET framework, C# for business logic, SQL databases, and EFCore for data manipulation. After registration, users can enjoy media player functionality, allowing seamless media playback.</p>
+            </div>
+        </div>
+                <!-- Fruit Flyer -->
+        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12" style="border-radius: 15px">
+            <div class="card d-flex justify-content-end border-light border-end-0 border-top-0 border-bottom-0" style="
+            background-image: url('./Images/fruit\ flyer.png');
+            background-size: cover;
+            background-position: center;
+            height: 350px;
+            border-radius: 15px;">
+                <div>
+                    <h4 class="ms-5 fst-italic fw-bold">Fruit Flyer</h5>
+                    <p class="ms-5 mb-0 text-primary fw-bold">C#</p>
+                    <p class="ms-5 mb-0 mt-1 fst-italic lead" style="color: white;">Frontend / Backend</p>
+                            <a href="https://github.com/SioneYerkovich/TheCullinaryCollective" target="new"><button type="button" class="btn btn-info ms-5 mb-4 mt-3">Github</button></a>
+                            <a href="https://github.com/SioneYerkovich/Fruit-Flyer" target="new"><button type="button" class="btn btn-info ms-1 mb-4 mt-3 text-white text-nowrap">Try it</button></a>
+                </div>
+            </div>
+            <div class="container">
+                <p class="mx-4 mt-3 text-white text-center">Fruit Flyer – 2D story-driven runner game developed in Unity and Visual Studio 2022.
+Inspired by classics like Galaga, Space Invaders, and Subway Surfers, the game is designed for accessibility, with simplified one-button controls to ensure anyone can play. Players are gradually introduced to the mechanics, balancing challenge and satisfaction as the difficulty ramps up. The game features pixel art with mostly hand-drawn animations, combining a nostalgic aesthetic with modern gameplay design.</p>
             </div>
         </div>
         </section>
