Feature (main): 1. Extension of previous commit

--- a/index.html
+++ b/index.html
@@ -163,8 +163,9 @@
                             <h5 class="mb-1 col-sm-12 col-md-4" style="color: white"><i class="bi bi-check2-circle text-primary me-2"></i>Bootstrap</h5>
                             <h5 class="mb-1 col-sm-12 col-md-4" style="color: white"><i class="bi bi-check2-circle text-primary me-2"></i>HTML</h5>
                             <h5 class="mb-1 col-sm-12 col-md-4" style="color: white"><i class="bi bi-check2-circle text-primary me-2"></i>CSS</h5>
-                            <h5 class="mb-1 col-sm-12 col-md-4 offset-md-2" style="color: white"><i class="bi bi-check2-circle text-primary me-2"></i>XAML</h5>
+                            <h5 class="mb-1 col-sm-12 col-md-4" style="color: white"><i class="bi bi-check2-circle text-primary me-2"></i>XAML</h5>
                             <h5 class="mb-1 col-sm-12 col-md-4" style="color: white"><i class="bi bi-check2-circle text-primary me-2"></i>.NET Maui</h5>
+                            <h5 class="mb-1 col-sm-12 col-md-4" style="color: white"><i class="bi bi-check2-circle text-primary me-2"></i>Unity</h5>
                         </div>
                 </div>
             </div>
