--- a/index.html
+++ b/index.html
@@ -267,8 +267,8 @@
                     <h4 class="ms-5 fst-italic fw-bold">Fruit Flyer</h5>
                     <p class="ms-5 mb-0 text-primary fw-bold">C#</p>
                     <p class="ms-5 mb-0 mt-1 fst-italic lead" style="color: white;">Frontend / Backend</p>
-                            <a href="https://github.com/SioneYerkovich/TheCullinaryCollective" target="new"><button type="button" class="btn btn-info ms-5 mb-4 mt-3">Github</button></a>
-                            <a href="https://github.com/SioneYerkovich/Fruit-Flyer" target="new"><button type="button" class="btn btn-info ms-1 mb-4 mt-3 text-white text-nowrap">Try it</button></a>
+                            <a href="https://github.com/SioneYerkovich/Fruit-Flyer" target="new"><button type="button" class="btn btn-info ms-5 mb-4 mt-3">Github</button></a>
+                            <a href="https://yerkobizerko.itch.io/fruit-flyer" target="new"><button type="button" class="btn btn-info ms-1 mb-4 mt-3 text-white text-nowrap">Try it</button></a>
                 </div>
             </div>
             <div class="container">
